# rustic

./: CHANGELOG.md  Cargo.toml  README  README.md
src/: lib.rs  main.rs
